--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -713,5 +713,6 @@
     <string name="yes">Sì</string>
     <string name="lbl_story_in_single_book">«%1$s» è presente in un solo libro:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importa un file di testo con numeri ISBN. Il file dovrebbe avere un unico codice ISBN su ogni riga. I risultati verranno messi in coda.</string>
+    <string name="debug_select_items">Seleziona ciò che desideri includere</string>
 
 </resources>
