--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -712,6 +712,7 @@
     <string name="x_of_y">%1$d van %2$d</string>
     <string name="yes">Ja</string>
     <string name="tip_import_isbn_list">Importeer een tekstbestand met ISBN-nummers. Het bestand moet op elke regel één enkel ISBN-nummer hebben. De resultaten worden in de wachtrij geplaatst.</string>
+    <string name="debug_select_items">Selecteer wat u wilt opnemen</string>
 
 
 </resources>
