--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -724,5 +724,6 @@
     <string name="yes">Ano</string>
     <string name="lbl_story_in_single_book">„%1$s“ se nachází v jedné knize:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importujte textový soubor s čísly ISBN. Soubor by měl mít na každém řádku jedno ISBN. Výsledky budou zařazeny do fronty.</string>
+    <string name="debug_select_items">Vyberte, co chcete zahrnout</string>
 
 </resources>
