--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -711,5 +711,6 @@
     <string name="yes">Sí</string>
     <string name="lbl_story_in_single_book">«%1$s» está presente en un solo libro:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importa un archivo de texto con números ISBN. El archivo debe tener un solo ISBN en cada línea. Los resultados se colocarán en la cola.</string>
+    <string name="debug_select_items">Seleccione lo que le gustaría incluir</string>
 
 </resources>
