--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,8 @@
     Reference sites:
     https://www.abbreviations.com/
 
-     Some linguists, especially in British English, believe that "loan" should only be used as a noun,
-      while the correct verb is only "lend."
+     Some linguists, especially in British English, believe that "loan" should only
+     be used as a noun, while the correct verb is only "lend."
 
 
     ENTITY:
