--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -504,7 +504,7 @@
     <!-- Color - content is full color. -->
     <string name="book_color_full_color">Colored</string>
     <!-- Color - content is black and white / single color only. -->
-    <string name="book_color_uncolored">Black &amp; white</string>
+    <string name="book_color_black_and_white">Black &amp; white</string>
     <!-- uncolored, but with 1 or 2 support-colors.
          e.g. black and white, but additional red for emphasis -->
     <string name="book_color_support_color">Bicolored</string>
