--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -647,6 +647,7 @@
     <string name="vldt_boolean_expected_for_x">Oczekiwana wartość logiczna (0,1,t,f,true,false) dla „%1$s”</string>
     <string name="vldt_date_expected_for_x">Oczekiwana data „%1$s”</string>
     <string name="vldt_failure">Błąd walidacji.</string>
+    <string name="vldt_list_message">(%1$d) %2$s</string>
     <string name="vldt_integer_expected_for_x">Oczekiwana wartość całkowita dla „%1$s”</string>
     <string name="vldt_non_blank_required">Oczekiwana wartość niepusta</string>
     <string name="vldt_non_blank_required_for_x">Oczekiwana wartość niepusta dla „%1$s”</string>
