--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -649,6 +649,7 @@
     <string name="vldt_boolean_expected_for_x">È previsto un valore booleano (0,1,t,f,true,false) for «%1$s»</string>
     <string name="vldt_date_expected_for_x">È prevista una data per «%1$s»</string>
     <string name="vldt_failure">Errore di convalida.</string>
+    <string name="vldt_list_message">(%1$d) %2$s</string>
     <string name="vldt_integer_expected_for_x">È previsto un valore intero per «%1$s»</string>
     <string name="vldt_non_blank_required">È richiesto un valore</string>
     <string name="vldt_non_blank_required_for_x">È richiesto un valore per «%1$s»</string>
