--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -44,7 +44,7 @@
     <string name="X_confirm_continue">Estás seguro de que quieres continuar ?</string>
     <string name="X_error_authentication_failed">Autenticación fallida</string>
     <string name="X_error_download_failed">Descarga fracasó</string>
-    <string name="X_error_file_must_contain_column">El fichero debe tener una columna con el nombre %1$s</string>
+    <string name="error_record_must_contain_column">El registro debe contener un campo llamado %1$s.</string>
     <string name="X_error_network_site_has_problems">El sitio web tiene problemas.</string>
     <string name="X_error_not_available">%1$s no disponible</string>
     <string name="X_error_storage_not_accessible_s">Almacenamiento no accesible: %1$s</string>
