--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -44,7 +44,7 @@
     <string name="X_confirm_continue">Jesteś pewien, że chcesz kontynuować ?</string>
     <string name="X_error_authentication_failed">Uwierzytelnianie nie powiodło się</string>
     <string name="X_error_download_failed">Pobieranie nie udane</string>
-    <string name="X_error_file_must_contain_column">Plik musi zawierać pole %1$s</string>
+    <string name="error_record_must_contain_column">Rekord musi zawierać pole o nazwie „%1$s”.</string>
     <string name="X_error_network_site_has_problems">Witryna ma problemy.</string>
     <string name="X_error_not_available">%1$s jest niedostępny</string>
     <string name="X_error_storage_not_accessible_s">Pamięć niedostępna: %1$s</string>
